# umodman

./: .eslintrc.js  README.md  components.json  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js
.github/workflows/: release.yml
src/: app.html  app.pcss  constants.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fs.rs  main.rs
src/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte
src/components/ui/button/: button.svelte
src/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte
src/components/ui/input/: input.svelte
src/components/ui/link/: index.ts  link.svelte
src/components/ui/pagination/: pagination-content.svelte  pagination-ellipsis.svelte  pagination-item.svelte  pagination-link.svelte  pagination-next-button.svelte  pagination-prev-button.svelte  pagination.svelte
src/components/ui/progress/: progress.svelte
src/components/ui/select/: select-content.svelte  select-item.svelte  select-label.svelte  select-separator.svelte  select-trigger.svelte
src/core/: downloads.ts  mods.ts  profile.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/browse-mods/: +page.svelte  ModItem.svelte
src/routes/downloads/: +page.svelte
src/routes/installed-mods/: +page.svelte  InstalledMod.svelte
src/routes/settings/: +page.svelte
src/utils/: commands.ts  json.ts
