[package]
name = "umodman"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = "1.0.79"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5.4", features = ["fs-all", "path-all", "shell-open"] }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
zip-extract = "0.1.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
